<resources>
    <string name="app_name">Shopping App</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_by_bata">Trade by <font color="#4E55D7">bate</font></string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="phones">Phones</string>
    <string name="view_all">View all</string>
    <string name="empty_fragment">Empty Fragment</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="brand_name">Brand name</string>
    <string name="color">Color:</string>
    <string name="reviews_amount">(%1$d reviews)</string>
    <string name="quantity">Quantity:</string>
    <string name="minus">-</string>
    <string name="add_to_cart">Add to cart</string>
</resources>