<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignInFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:orientation="vertical">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="107dp"
            android:text="@string/sign_in" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:textCursorDrawable="@drawable/text_cursor"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:background="@drawable/background_text_input"
            android:freezesText="true"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:paddingVertical="7dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_surname"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/text_cursor"
            android:layout_marginTop="35dp"
            android:background="@drawable/background_text_input"
            android:freezesText="true"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:paddingVertical="7dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_email"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/text_cursor"
            android:layout_marginTop="35dp"
            android:background="@drawable/background_text_input"
            android:freezesText="true"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="7dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/background_text_input">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:textCursorDrawable="@drawable/text_cursor"
                android:layout_height="wrap_content"
                android:background="@null"
                android:freezesText="true"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingVertical="7dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/password_eye_btn"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="15dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/icon_eye_off" />

        </FrameLayout>

        <TextView
            android:id="@+id/sign_in_btn"
            style="@style/ButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/background_big_btn"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/sign_in" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/already_have_an_account"
                android:textColor="#808080"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/log_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/log_in"
                android:textColor="#254FE6"
                android:textSize="10sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="70dp"
            android:orientation="vertical">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/sign_in_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/icon_google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/sign_in_apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/icon_apple" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/sign_in_with_apple"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>