<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:srcCompat="@drawable/icon_menu" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/trade_by_bata"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/icon_container"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="47dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:strokeColor="#4E4D4D"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/icon_user" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/icon_container"
        app:layout_constraintStart_toStartOf="@id/icon_container"
        app:layout_constraintTop_toBottomOf="@id/icon_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/location"
            android:textColor="#5B5B5B"
            android:textSize="10sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/icon_caret_down" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <FrameLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/background_search_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:completionThreshold="1"
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/poppins"
            android:freezesText="true"
            android:gravity="center"
            android:hint="@string/what_are_you_looking_for"
            android:imeOptions="actionSearch"
            android:inputType="textCapWords|text"
            android:paddingVertical="5dp"
            android:textColor="#5B5B5B"
            android:textColorHint="@color/search_text_hint_color"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textSize="9sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search_icon"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/icon_search" />

        <ProgressBar
            android:id="@+id/searchBarProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="15dp"
            android:indeterminateTint="#4E55D7"
            android:visibility="gone" />

    </FrameLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        tools:listitem="@layout/item_category" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#4E55D7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collections_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_categories"
        tools:itemCount="3"
        tools:listitem="@layout/item_collection" />

</androidx.constraintlayout.widget.ConstraintLayout>